2008-05-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/thread-packets.c (threadmatch): Silence pointer signedness
	warning.
	(threadref_to_int): Ditto.
	* src/generic-stub.c (__mem2hex): Ditto.
	(__mem2hex_safe): Ditto.
	(__hex2mem): Ditto.
	(__hex2mem_safe): Ditto.
	* src/hal_if.c (delay_us): Ditto.
	* include/hal_stub.h (CYG_HAL_GDB_LEAVE_CRITICAL_IO_REGION):
	Instead of using a local variable to avoid compiler reordering
	when taking the address of a label, instead call an external function.
	(NB making the variable volatile isn't sufficient).

2008-05-13  Chris Zimman  <czimman@bloomberg.com>

	* cdl/hal.cdl: Work around problem with current ARM EABI tools by
	using /dev/null as linker script. Should be safe with other tools.

2007-11-27  Bart Veer  <bartv@ecoscentric.com>

	* src/hal_if.c (delay_us): use HAL_DELAY_US() rather than the
	fancy implementation if the port cannot provide HAL_CLOCK_READ()

2007-09-27  Grant Edwards <grante@visi.com>

        * include/hal_endian.h (SWAP16): Fix "return value" so
        that it only returns data in lower 16 bits instead of 24.

2006-05-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/hal_if.c (cyg_hal_diag_mangler_gdb_flush): Fix compiler
	warning about signed/unsigned.

2006-04-19  Alexander Neundorf <alexander.neundorf@jenoptik.com

	* include/hal_if.h, src/hal_if.c: add a VV call for modifying
        the FIS table from eCos applications

2005-06-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/hal_tables.h (CYG_HAL_TABLE_{QUALIFIED_}ENTRY): added
	CYGBLD_ATTRIB_USED so that gcc 3.4.4 does not discard entries
	which are not refereced explicitly. Problem reported by
	Oliver Munz.
	
2005-06-26  Bart Veer  <bartv@ecoscentric.com>

	* doc/hal.sgml: make HAL_DELAY_US() mandatory and define it to be
	thread-safe.

2005-05-19  Peter Korsgaard  <jacmet@sunsite.dk>

	* doc/porting.sgml: Changed dead sourceware.cygnus.com links to
	ecos.sourceware.org.

2005-04-27  Enrico Piria <epiria@libero.it>
